--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title>
+    <!-- <title>{{ site.title | default: site.github.repository_name }} by {{ site.github.owner_name }}</title> -->
+    <title>{{ site.github.owner_name | append: " - " | append: page.title }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
@@ -14,19 +15,35 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <style>
+      li {
+        margin-right: 1em;
+      }
+      section #title {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
-      <!--<div id="header">
-        <nav>
-          <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
-          {% if site.show_downloads %}
-            <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
-            <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
-            <li class="title">DOWNLOADS</li>
+    <!-- begin header -->
+    <div id="header">
+      <nav>
+        <li class="fork"><a href="/">Home</a></li>
+        {% for page in site.pages %}
+          {% assign extension = page.url | split: "." | last %}
+          {% if extension == "html" %}
+            <li class="fork"><a href={{ page.url }}>{{ page.title }}</a></li>
           {% endif %}
-        </nav>
-      </div><!-- end header -->
+        {% endfor %}
+        <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
+        {% if site.show_downloads %}
+          <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
+          <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        {% endif %}
+      </nav>
+    </div>
+    <!-- end header -->
 
     <div class="wrapper">
 
@@ -40,6 +57,10 @@
         </div>
 
         {{ content }}
+        <!-- In case I want to explore what 'site.github' contains. -->
+        <!-- {% for child in site.github %}
+          <h5>{{ child | append: ": " | append: site.github[child] }}</h5>
+        {% endfor %} -->
 
       </section>
 
